more fixes to system.storage api
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/system.storage.html
+++ b/system.storage.html
@@ -2,7 +2,8 @@
 layout: default-withsidebar
 title: chrome.system.storage
 support: 20
-copyright: opera-ccby
+copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/system.storage.html
 ---
 
 <div id="gc-pagecontent">
@@ -61,7 +62,7 @@ copyright: opera-ccby
 					<strong>Description:</strong>
 				</td>
 				<td>
-					Use the <code>opr.stash</code> module to read items stored in a user's Stash.
+					Use the <code>chrome.system.storage</code> API to query storage device information and be notified when a removable storage device is attached and detached. 
 				</td>
 			</tr>
 			<tr>
@@ -69,7 +70,7 @@ copyright: opera-ccby
 					<strong>Permissions:</strong>
 				</td>
 				<td>
-					<code>"stash"</code>
+					<code>"system.storage"</code>
 				</td>
 			</tr>
 		</tbody>
