added missing icons tutorial video

--- a/tut_icons.html
+++ b/tut_icons.html
@@ -41,7 +41,7 @@ copyright: opera-ccby
 	  <ul>
 	     <li><p><a href="static/templates/user_icon_template.psd">Photoshop (PSD) icon template</a></p></li>
 	     <li><p><a href="static/templates/user_icon_template.svg">Inkscape SVG icon template</a></p></li>
-             <li><p>There is also an extension icons screencast available covering how to use an older version of the Inkscape template. Watch this for more details: <a href="http://dev.opera.com/articles/view/creating-effective-opera-extension-icons/svg_template_tutorial.webm">Extension icons screencast (WebM)</a></p></li>
+             <li><p>There is also an extension icons screencast available covering how to use an older version of the Inkscape template. Watch this for more details: <a href="static/videos/svg_template_tutorial.webm">Extension icons screencast (WebM)</a></p></li>
 	  </ul>
 	</div>
 
