Small change in tabs documentation page
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/tabs.html
+++ b/tabs.html
@@ -1392,7 +1392,7 @@ create, modify, and rearrange tabs in the browser.
                 </code></div>
                 <div class="description">
                   <p>
-                    Captures the visible area of the currently active tab in the specified window. You must have <a href='declare_permissions.html'>host permission</a> for the URL displayed by the tab.
+                    Captures the visible area of the currently active tab in the specified window. You must have <a href='declare_permissions.html'><code>&lt;all_urls&gt;</code></a> permission to use this method.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
