added line about ads in content scripts

--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -176,6 +176,7 @@ copyright: opera-ccby
 	<li>No external JavaScript is allowed. All JavaScript code must be contained in the extension. External APIs are ok.</li>
 	<li>Values in <code>manifest.json</code> must be sound and valid.</li>
 	<li>Flash is not allowed.</li>
+	<li>Ads in content scripts are not allowed.</li>
 	<li>Speed Dial extensions cannot just be a static picture linking to a website. They must provide valuable functionality, such as e.g. real-time info.</li>
 	<li>Extensions cannot just consist of a button linking to a website, or of a popup with some static links pointing to a website. Extensions must provide valuable functionality, such as e.g. a transformation applied on a page when a button is clicked, real-time info in a popup, etc.</li>
 	<li>Content inside popups must be optimized for display in a popup. The content must match the popup's size, and vertical scrolling should only be used if really necessary. Avoid horizontal scrolling inside popups.</li>
