--- a/addons.html
+++ b/addons.html
@@ -89,8 +89,7 @@ copyright: opera-ccby
 								<p>
 									The <em>error_callback</em> parameter should specify a function that looks like this:
 								</p>
-								<pre class="prettyprint">
-				<code>function(String errorMessage)<span class="subdued">{...}</span>;</code>
+				<pre class="prettyprint"><code>function(String errorMessage)<span class="subdued">{...}</span>;</code>
 				</pre>
 			</div>
 		</div>
