--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -193,4 +193,4 @@ copyright: opera-ccby
 
 <h2 id="published">5. When the extension satisfies all criteria, it will be published</h2>
 
-<p>The publisher adds a rating to your extension that defines its position on the recommended list. If your extension is outstanding, it may be placed in the "Recommended" section.</p>
+<p>If your extension is outstanding, it may be placed in the "Recommended" section.</p>
