--- a/tut_content_scripts.html
+++ b/tut_content_scripts.html
@@ -5,39 +5,39 @@ copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/content_scripts.html
 ---
 
-      <div id="gc-pagecontent">
-        <div id="toc">
-        	<h2>Contents</h2>
-          <ol>
-            <li>
-              <a href=#registration>Manifest</a>
-              <ol>
-                <li><a href=#match-patterns-globs>Match patterns and globs</a></li>
-              </ol>
-            </li>
-            <li>
-              <a href=#pi>Programmatic injection</a>
-            </li>
-            <li>
-              <a href=#execution-environment>Execution environment</a>
-            </li>
-            <li>
-              <a href=#host-page-communication>Communication with the embedding page</a>
-            </li>
-            <li>
-              <a href=#security-considerations>Security considerations</a>
-            </li>
-            <li>
-              <a href=#extension-files>Referring to extension files</a>
-            </li>
-            <li>
-              <a href=#examples> Examples </a>
-            </li>
-            <li>
-              <a href=#videos> Videos </a>
-            </li>
-          </ol>
-        </div>
+			<div id="gc-pagecontent">
+				<div id="toc">
+					<h2>Contents</h2>
+					<ol>
+						<li>
+							<a href=#registration>Manifest</a>
+							<ol>
+								<li><a href=#match-patterns-globs>Match patterns and globs</a></li>
+							</ol>
+						</li>
+						<li>
+							<a href=#pi>Programmatic injection</a>
+						</li>
+						<li>
+							<a href=#execution-environment>Execution environment</a>
+						</li>
+						<li>
+							<a href=#host-page-communication>Communication with the embedding page</a>
+						</li>
+						<li>
+							<a href=#security-considerations>Security considerations</a>
+						</li>
+						<li>
+							<a href=#extension-files>Referring to extension files</a>
+						</li>
+						<li>
+							<a href=#examples> Examples </a>
+						</li>
+						<li>
+							<a href=#videos> Videos </a>
+						</li>
+					</ol>
+				</div>
 
 
 
@@ -56,9 +56,9 @@ Here are some examples of what content scripts can do:
 </p>
 
 <ul>
-  <li>Find unlinked URLs in web pages and convert them into hyperlinks
-  <li>Increase the font size to make text more legible
-  <li>Find and process <a href="http://microformats.org/">microformat</a> data in the DOM
+	<li>Find unlinked URLs in web pages and convert them into hyperlinks
+	<li>Increase the font size to make text more legible
+	<li>Find and process <a href="http://microformats.org/">microformat</a> data in the DOM
 </ul>
 
 <p>
@@ -67,17 +67,17 @@ They <b>cannot</b>:
 </p>
 
 <ul>
-  <li>
-    Use chrome.* APIs
-    (except for parts of
-    <a href="extension.html"><code>chrome.extension</code></a>)
-  </li>
-  <li>
-    Use variables or functions defined by their extension's pages
-  </li>
-  <li>
-    Use variables or functions defined by web pages or by other content scripts
-  </li>
+	<li>
+		Use chrome.* APIs
+		(except for parts of
+		<a href="https://developer.chrome.com/extensions/extension"><code>chrome.extension</code></a>)
+	</li>
+	<li>
+		Use variables or functions defined by their extension's pages
+	</li>
+	<li>
+		Use variables or functions defined by web pages or by other content scripts
+	</li>
 </ul>
 
 <p>
@@ -108,16 +108,16 @@ as in the following example.
 </p>
 
 <pre class="prettyprint">{
-  "name": "My extension",
-  ...
-  <b>"content_scripts": [
-    {
-      "matches": ["http://www.google.com/*"],
-      "css": ["mystyles.css"],
-      "js": ["jquery.js", "myscript.js"]
-    }
-  ]</b>,
-  ...
+	"name": "My extension",
+	...
+	<b>"content_scripts": [
+		{
+			"matches": ["http://www.google.com/*"],
+			"css": ["mystyles.css"],
+			"js": ["jquery.js", "myscript.js"]
+		}
+	]</b>,
+	...
 }</pre>
 
 <p>
@@ -128,12 +128,12 @@ as described in <a href="#pi">Programmatic injection</a>.
 </p>
 
 <pre class="prettyprint">{
-  "name": "My extension",
-  ...
-  <b>"permissions": [
-    "tabs", "http://www.google.com/*"
-  ]</b>,
-  ...
+	"name": "My extension",
+	...
+	<b>"permissions": [
+		"tabs", "http://www.google.com/*"
+	]</b>,
+	...
 }</pre>
 
 <p>
@@ -144,90 +144,90 @@ Each item in the <code>content_scripts</code> array
 can have the following properties:</p>
 
 <table class="simple">
-  <tr>
-    <th>Name</th>
-    <th>Type</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td><code>matches</code></td>
-    <td>array of strings</td>
-    <td><em>Required.</em>
-    Specifies which pages this content script will be injected into.
-    See <a href="tut_match_patterns.html">Match Patterns</a>
-    for more details on the syntax of these strings
-    and <a href="#match-patterns-globs">Match patterns and globs</a>
-    for information on how to exclude URLs.</td>
-  </tr>
-  <tr>
-    <td><code>exclude_matches</code></td>
-    <td>array of strings</td>
-    <td><em>Optional.</em>
-    Excludes pages that this content script would otherwise be
-    injected into.
-    See <a href="tut_match_patterns.html">Match Patterns</a>
-    for more details on the syntax of these strings
-    and <a href="#match-patterns-globs">Match patterns and globs</a>
-    for information on how to exclude URLs.</td>
-  </tr>
-  <tr>
-    <td><code>css<code></td>
-    <td>array of strings</td>
-    <td><em>Optional.</em>
-    The list of CSS files to be injected into matching pages. These are injected in the order they appear in this array, before any DOM is constructed or displayed for the page.</td>
-  </tr>
-  <tr>
-    <td><code>js<code></td>
-    <td><nobr>array of strings</nobr></td>
-    <td><em>Optional.</em>
-    The list of JavaScript files to be injected into matching pages. These are injected in the order they appear in this array.</td>
-  </tr>
-  <tr id="run_at">
-    <td><code>run_at<code></td>
-    <td>string</td>
-    <td><em>Optional.</em>
-    Controls when the files in <code>js</code> are injected. Can be "document_start", "document_end", or "document_idle". Defaults to "document_idle".
+	<tr>
+		<th>Name</th>
+		<th>Type</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><code>matches</code></td>
+		<td>array of strings</td>
+		<td><em>Required.</em>
+		Specifies which pages this content script will be injected into.
+		See <a href="tut_match_patterns.html">Match Patterns</a>
+		for more details on the syntax of these strings
+		and <a href="#match-patterns-globs">Match patterns and globs</a>
+		for information on how to exclude URLs.</td>
+	</tr>
+	<tr>
+		<td><code>exclude_matches</code></td>
+		<td>array of strings</td>
+		<td><em>Optional.</em>
+		Excludes pages that this content script would otherwise be
+		injected into.
+		See <a href="tut_match_patterns.html">Match Patterns</a>
+		for more details on the syntax of these strings
+		and <a href="#match-patterns-globs">Match patterns and globs</a>
+		for information on how to exclude URLs.</td>
+	</tr>
+	<tr>
+		<td><code>css<code></td>
+		<td>array of strings</td>
+		<td><em>Optional.</em>
+		The list of CSS files to be injected into matching pages. These are injected in the order they appear in this array, before any DOM is constructed or displayed for the page.</td>
+	</tr>
+	<tr>
+		<td><code>js<code></td>
+		<td><nobr>array of strings</nobr></td>
+		<td><em>Optional.</em>
+		The list of JavaScript files to be injected into matching pages. These are injected in the order they appear in this array.</td>
+	</tr>
+	<tr id="run_at">
+		<td><code>run_at<code></td>
+		<td>string</td>
+		<td><em>Optional.</em>
+		Controls when the files in <code>js</code> are injected. Can be "document_start", "document_end", or "document_idle". Defaults to "document_idle".
 
-    <br><br>
+		<br><br>
 
-    In the case of "document_start", the files are injected after any files from <code>css</code>, but before any other DOM is constructed or any other script is run.
+		In the case of "document_start", the files are injected after any files from <code>css</code>, but before any other DOM is constructed or any other script is run.
 
-    <br><br>
+		<br><br>
 
-    In the case of "document_end", the files are injected immediately after the DOM is complete, but before subresources like images and frames have loaded.
+		In the case of "document_end", the files are injected immediately after the DOM is complete, but before subresources like images and frames have loaded.
 
-    <br><br>
+		<br><br>
 
-    In the case of "document_idle", the browser chooses a time to inject scripts between "document_end" and immediately after the <code><a href="http://www.whatwg.org/specs/web-apps/current-work/#handler-onload">window.onload</a></code> event fires. The exact moment of injection depends on how complex the document is and how long it is taking to load, and is optimized for page load speed.
+		In the case of "document_idle", the browser chooses a time to inject scripts between "document_end" and immediately after the <code><a href="http://www.whatwg.org/specs/web-apps/current-work/#handler-onload">window.onload</a></code> event fires. The exact moment of injection depends on how complex the document is and how long it is taking to load, and is optimized for page load speed.
 
-    <br><br>
+		<br><br>
 
-    <b>Note:</b> With "document_idle", content scripts may not necessarily receive the <code>window.onload</code> event, because they may run after it has
-    already fired. In most cases, listening for the <code>onload</code> event is unnecessary for content scripts running at "document_idle" because they are guaranteed to run after the DOM is complete. If your script definitely needs to run after <code>window.onload</code>, you can check if <code>onload</code> has already fired by using the <code><a href="http://www.whatwg.org/specs/web-apps/current-work/#dom-document-readystate">document.readyState</a></code> property.</td>
-  </tr>
-  <tr>
-    <td><code>all_frames<code></td>
-    <td>boolean</td>
-    <td><em>Optional.</em>
-    Controls whether the content script runs in all frames of the matching page, or only the top frame.
-    <br><br>
-    Defaults to <code>false</code>, meaning that only the top frame is matched.</td>
-  </tr>
-  <tr>
-    <td><code>include_globs</code></td>
-    <td>array of string</td>
-    <td><em>Optional.</em>
-    Applied after <code>matches</code> to include only those URLs that also match this glob. Intended to emulate the <a href="http://wiki.greasespot.net/Metadata_Block#.40include"><code>@include</code></a> Greasemonkey keyword.
-    See <a href="#match-patterns-globs">Match patterns and globs</a> below for more details.</td>
-  </tr>
-  <tr>
-    <td><code>exclude_globs</code></td>
-    <td>array of string</td>
-    <td><em>Optional.</em>
-    Applied after <code>matches</code> to exclude URLs that match this glob.
-    Intended to emulate the <a href="http://wiki.greasespot.net/Metadata_Block#.40include"><code>@exclude</code></a> Greasemonkey keyword.
-    See <a href="#match-patterns-globs">Match patterns and globs</a> below for more details.</td>
-  </tr>
+		<b>Note:</b> With "document_idle", content scripts may not necessarily receive the <code>window.onload</code> event, because they may run after it has
+		already fired. In most cases, listening for the <code>onload</code> event is unnecessary for content scripts running at "document_idle" because they are guaranteed to run after the DOM is complete. If your script definitely needs to run after <code>window.onload</code>, you can check if <code>onload</code> has already fired by using the <code><a href="http://www.whatwg.org/specs/web-apps/current-work/#dom-document-readystate">document.readyState</a></code> property.</td>
+	</tr>
+	<tr>
+		<td><code>all_frames<code></td>
+		<td>boolean</td>
+		<td><em>Optional.</em>
+		Controls whether the content script runs in all frames of the matching page, or only the top frame.
+		<br><br>
+		Defaults to <code>false</code>, meaning that only the top frame is matched.</td>
+	</tr>
+	<tr>
+		<td><code>include_globs</code></td>
+		<td>array of string</td>
+		<td><em>Optional.</em>
+		Applied after <code>matches</code> to include only those URLs that also match this glob. Intended to emulate the <a href="http://wiki.greasespot.net/Metadata_Block#.40include"><code>@include</code></a> Greasemonkey keyword.
+		See <a href="#match-patterns-globs">Match patterns and globs</a> below for more details.</td>
+	</tr>
+	<tr>
+		<td><code>exclude_globs</code></td>
+		<td>array of string</td>
+		<td><em>Optional.</em>
+		Applied after <code>matches</code> to exclude URLs that match this glob.
+		Intended to emulate the <a href="http://wiki.greasespot.net/Metadata_Block#.40include"><code>@exclude</code></a> Greasemonkey keyword.
+		See <a href="#match-patterns-globs">Match patterns and globs</a> below for more details.</td>
+	</tr>
 </table>
 
 <h3 id="match-patterns-globs">Match patterns and globs</h3>
@@ -256,16 +256,16 @@ Glob properties follow a different, more flexible syntax than <a href="tut_match
 For example, the glob "http://???.example.com/foo/*" matches any of the following:
 </p>
 <ul>
-  <li>"http://www.example.com/foo/bar"</li>
-  <li>"http://the.example.com/foo/"</li>
+	<li>"http://www.example.com/foo/bar"</li>
+	<li>"http://the.example.com/foo/"</li>
 </ul>
 <p>
 However, it does <em>not</em> match the following:
 </p>
 <ul>
-  <li>"http://my.example.com/foo/bar"</li>
-  <li>"http://example.com/foo/"</li>
-  <li>"http://www.example.com/foo"</li>
+	<li>"http://my.example.com/foo/bar"</li>
+	<li>"http://example.com/foo/"</li>
+	<li>"http://www.example.com/foo"</li>
 </ul>
 
 <h2 id="pi">Programmatic injection</h2>
@@ -293,9 +293,9 @@ using the manifest file's
 <p>
 Once you have permissions set up,
 you can inject JavaScript into a page by calling
-<a href="tabs.html#method-executeScript">tabs.executeScript</a>.
+<a href="https://developer.chrome.com/extensions/tabs#method-executeScript">tabs.executeScript</a>.
 To inject CSS, use
-<a href="tabs.html#method-insertCSS">tabs.insertCSS</a>.
+<a href="https://developer.chrome.com/extensions/tabs#method-insertCSS">tabs.insertCSS</a>.
 </p>
 
 <p>
@@ -310,13 +310,13 @@ and executing the script.
 <pre class="prettyprint">
 <em>/* in background.html */</em>
 chrome.browserAction.onClicked.addListener(function(tab) {
-  chrome.tabs.executeScript(null,
-                           {code:"document.body.bgColor='red'"});
+	chrome.tabs.executeScript(null,
+													 {code:"document.body.bgColor='red'"});
 });
 
 <em>/* in manifest.json */</em>
 "permissions": [
-  "tabs", "http://*/*"
+	"tabs", "http://*/*"
 ],
 </pre>
 
@@ -347,15 +347,15 @@ You inject the file's contents like this:
 <pre class="prettyprint">hello.html
 ==========
 &lt;html&gt;
-  &lt;button id="mybutton"&gt;click me&lt;/button&gt;
-  &lt;script&gt;
-    var greeting = "hello, ";
-    var button = document.getElementById("mybutton");
-    button.person_name = "Bob";
-    button.addEventListener("click", function() {
-      alert(greeting + button.person_name + ".");
-    }, false);
-  &lt;/script&gt;
+	&lt;button id="mybutton"&gt;click me&lt;/button&gt;
+	&lt;script&gt;
+		var greeting = "hello, ";
+		var button = document.getElementById("mybutton");
+		button.person_name = "Bob";
+		button.addEventListener("click", function() {
+			alert(greeting + button.person_name + ".");
+		}, false);
+	&lt;/script&gt;
 &lt;/html&gt;</pre>
 
 <p>Now, suppose this content script was injected into hello.html:
@@ -366,7 +366,7 @@ var greeting = "hola, ";
 var button = document.getElementById("mybutton");
 button.person_name = "Roberto";
 button.addEventListener("click", function() {
-  alert(greeting + button.person_name + ".");
+	alert(greeting + button.person_name + ".");
 }, false);
 </pre>
 
@@ -386,19 +386,19 @@ button.addEventListener("click", function() {
 var port = chrome.runtime.connect();
 
 window.addEventListener("message", function(event) {
-    // We only accept messages from ourselves
-    if (event.source != window)
-      return;
+		// We only accept messages from ourselves
+		if (event.source != window)
+			return;
 
-    if (event.data.type &amp;&amp; (event.data.type == "FROM_PAGE")) {
-      console.log("Content script received: " + event.data.text);
-      port.postMessage(event.data.text);
-    }
+		if (event.data.type &amp;&amp; (event.data.type == "FROM_PAGE")) {
+			console.log("Content script received: " + event.data.text);
+			port.postMessage(event.data.text);
+		}
 }, false);</pre>
 <pre class="prettyprint">http://foo.com/example.html
 ===========================
 document.getElementById("theButton").addEventListener("click", function() {
-    window.postMessage({ type: "FROM_PAGE", text: "Hello from the webpage!" }, "*");
+		window.postMessage({ type: "FROM_PAGE", text: "Hello from the webpage!" }, "*");
 }, false);</pre>
 <p>In the above example, example.html (which is not a part of the extension) posts messages to itself, which are intercepted and inspected by the content script, and then posted to the extension process. In this way, the page establishes a line of communication to the extension process. The reverse is possible through similar means.</p>
 
@@ -445,7 +445,7 @@ contentscript.js
 var elmt_id = ...
 // The closure form of setTimeout does not evaluate scripts.
 window.setTimeout(function() {
-  animate(elmt_id);
+	animate(elmt_id);
 }, 200);
 </pre>
 
@@ -466,4 +466,4 @@ var imgURL = <b>chrome.extension.getURL("images/myimage.png")</b>;
 document.getElementById("someImage").src = imgURL;
 </pre>
 
-      </div>
+			</div>
