--- a/tut_optional_permissions.html
+++ b/tut_optional_permissions.html
@@ -5,7 +5,7 @@ copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/extensions/permissions.html
 ---
 <h2>Introduction</h2>
-<p>You can use the <a href="permissions.html"><code>chrome.permissions</code> API</a> to request <a href="#manifest">declared optional permissions</a> at run time rather than install time, so users understand why the permissions are needed and grant only those that are necessary.</p>
+<p>You can use the <a href="https://developer.chrome.com/extensions/permissions"><code>chrome.permissions</code> API</a> to request <a href="#manifest">declared optional permissions</a> at run time rather than install time, so users understand why the permissions are needed and grant only those that are necessary.</p>
 
 
 <h2 id="types">
