--- a/tut_privacy.html
+++ b/tut_privacy.html
@@ -8,17 +8,17 @@ originalsource: http://developer.chrome.com/extensions/privacy.html
 
 <h2 id="manifest">Manifest</h2>
 <p>
-You must declare the <code>"privacy"</code> permission in your extension's manifest to use the <a href="privacy.html">Privacy API</a>. For example:
+You must declare the <code>"privacy"</code> permission in your extension's manifest to use the <a href="https://developer.chrome.com/extensions/privacy">Privacy API</a>. For example:
 </p>
 
 <pre class="prettyprint" data-filename="manifest.json">
 {
-  "name": "My extension",
-  ...
-  "permissions": [
-    "privacy"
-  ],
-  ...
+	"name": "My extension",
+	...
+	"permissions": [
+		"privacy"
+	],
+	...
 }</pre>
 
 
@@ -28,10 +28,10 @@ Reading the current value of an Opera setting is straightforward. You'll first n
 <p>
 <pre class="prettyprint">
 chrome.privacy.services.autofillEnabled.get({}, function(details) {
-  if (details.value)
-    console.log('Autofill is on!');
-  else
-    console.log('Autofill is off!');
+	if (details.value)
+		console.log('Autofill is on!');
+	else
+		console.log('Autofill is off!');
 });</pre>
 
 <p>Changing the value of a setting is a little bit more complex, simply because you first must verify that your extension can control the setting. The user won't see any change to her settings if your extension toggles a setting that is either locked to a specific value by enterprise policies (<code>levelOfControl</code> will be set to <code>"not_controllable"</code>), or if another extension is controlling the value (<code>levelOfControl</code> will be set to <code>"controlled_by_other_extensions"</code>). The <code>set()</code> call will succeed, but the setting will be immediately overridden. As this might be confusing, it is advisable to warn the user when the settings they've chosen aren't practically applied.</p>
@@ -40,14 +40,14 @@ chrome.privacy.services.autofillEnabled.get({}, function(details) {
 
 <pre class="prettyprint">
 chrome.privacy.services.autofillEnabled.get({}, function(details) {
-  if (details.levelOfControl === 'controllable_by_this_extension') {
-    chrome.privacy.services.autofillEnabled.set({ value: true }, function() {
-      if (chrome.runtime.lastError === undefined)
-        console.log("Hooray, it worked!");
-      else
-        console.log("Sadness!", chrome.runtime.lastError);
-    }
-  }
+	if (details.levelOfControl === 'controllable_by_this_extension') {
+		chrome.privacy.services.autofillEnabled.set({ value: true }, function() {
+			if (chrome.runtime.lastError === undefined)
+				console.log("Hooray, it worked!");
+			else
+				console.log("Sadness!", chrome.runtime.lastError);
+		}
+	}
 });
 </pre>
 
@@ -56,13 +56,11 @@ chrome.privacy.services.autofillEnabled.get({}, function(details) {
 
 <pre class="prettyprint">
 chrome.privacy.services.autofillEnabled.onChange.addListener(
-    function (details) {
-      // The new value is stored in `details.value`, the new level of control
-      // in `details.levelOfControl`, and `details.incognitoSpecific` will be
-      // `true` if the value is specific to Incognito mode.
-    });
+		function (details) {
+			// The new value is stored in `details.value`, the new level of control
+			// in `details.levelOfControl`, and `details.incognitoSpecific` will be
+			// `true` if the value is specific to Incognito mode.
+		});
 </pre>
 
-<p><b>Note:</b> Full details about extensions' ability to control settings can be found under <a href="types.html#type-ChromeSetting"><code>chrome.types.ChromeSetting</code></a>. Also check out the properties of <a href="http://localhost:1337/privacy.html#property-services"><code>chrome.privacy.services</code></a> to see which features the privacy API controls.</p>
-
-
+<p><b>Note:</b> Full details about extensions' ability to control settings can be found under <a href="https://developer.chrome.com/extensions/types#type-ChromeSetting"><code>chrome.types.ChromeSetting</code></a>. Also check out the properties of <a href="https://developer.chrome.com/extensions/privacy#property-services"><code>chrome.privacy.services</code></a> to see which features the privacy API controls.</p>
