more URL fixes.

--- a/tut_webnavigation.html
+++ b/tut_webnavigation.html
@@ -59,8 +59,8 @@ fired. This event can fire any time after <code>onDOMContentLoaded</code>.
 <h2 id="relation_to_webRequest">Relation to webRequest events</h2>
 <p>
 There is no defined ordering between events of the <a
-href="webRequest.html">webRequest API</a> and the events of the
-<a href="webNavigation.html">webNavigation API</a>. It is possible that webRequest events are still received for
+href="https://developer.chrome.com/extensions/webRequest">webRequest API</a> and the events of the
+<a href="https://developer.chrome.com/extensions/webNavigation">webNavigation API</a>. It is possible that webRequest events are still received for
 frames that already started a new navigation, or that a navigation only
 proceeds after the network resources are already fully loaded.
 </p>
