--- a/tut_proxy.html
+++ b/tut_proxy.html
@@ -26,10 +26,10 @@ For example:</p>
 
 <p>
 Proxy settings are defined in a
-<a href="proxy.html#type-ProxyConfig">ProxyConfig</a> object. Depending on
+<a href="https://developer.chrome.com/extensions/proxy#type-ProxyConfig">ProxyConfig</a> object. Depending on
 Chrome's proxy settings, the settings may contain
-<a href="proxy.html#type-ProxyRules">ProxyRules</a> or a
-  <a href="proxy.html#type-PacScript">PacScript</a>.
+<a href="https://developer.chrome.com/extensions/proxy#type-ProxyRules">ProxyRules</a> or a
+  <a href="https://developer.chrome.com/extensions/proxy#type-PacScript">PacScript</a>.
 </p>
 
 <h3 id="proxy_modes">Proxy modes</h3>
@@ -54,15 +54,15 @@ values:
   <dt><code>pac_script</code></dt>
   <dd>In <code>pac_script</code> mode the proxy configuration is determined by
   a PAC script that is either retrieved from the URL specified in the
-  <a href="proxy.html#type-PacScript">PacScript</a> object or
+  <a href="https://developer.chrome.com/extensions/proxy#type-PacScript">PacScript</a> object or
   taken literally from the <code>data</code> element specified in the
-  <a href="proxy.html#type-PacScript">PacScript</a> object.
+  <a href="https://developer.chrome.com/extensions/proxy#type-PacScript">PacScript</a> object.
   Besides this, this mode allows no further parameters in the
   <code>ProxyConfig</code> object.</dd>
 
   <dt><code>fixed_servers</code></dt>
   <dd>In <code>fixed_servers</code> mode the proxy configuration is codified in
-  a <a href="proxy.html#type-ProxyRules">ProxyRules</a>
+  a <a href="https://developer.chrome.com/extensions/proxy#type-ProxyRules">ProxyRules</a>
   object. Its structure is described in <a href="#proxy_rules">Proxy rules</a>.
   Besides this, the <code>fixed_servers</code> mode allows no further parameters
   in the <code>ProxyConfig</code> object.</dd>
@@ -80,7 +80,7 @@ values:
 <h3 id="proxy_rules">Proxy rules</h3>
 
 <p>
-The <a href="proxy.html#type-ProxyRules">ProxyRules</a> object can contain
+The <a href="https://developer.chrome.com/extensions/proxy#type-ProxyRules">ProxyRules</a> object can contain
 either a <code>singleProxy</code> attribute or a subset of
 <code>proxyForHttp</code>, <code>proxyForHttps</code>, <code>proxyForFtp</code>,
 and <code>fallbackProxy</code>.
@@ -101,7 +101,7 @@ proxy server.
 
 <p>
 A proxy server is configured in a
-<a href="proxy.html#type-ProxyServer">ProxyServer</a> object. The connection
+<a href="https://developer.chrome.com/extensions/proxy#type-ProxyServer">ProxyServer</a> object. The connection
 to the proxy server (defined by the <code>host</code> attribute) uses the
 protocol defined in the <code>scheme</code> attribute. If no <code>scheme</code>
 is specified, the proxy connection defaults to <code>http</code>.
@@ -109,7 +109,7 @@ is specified, the proxy connection defaults to <code>http</code>.
 
 <p>
 If no <code>port</code> is defined in a
-<a href="proxy.html#type-ProxyServer">ProxyServer</a> object, the port is
+<a href="https://developer.chrome.com/extensions/proxy#type-ProxyServer">ProxyServer</a> object, the port is
 derived from the scheme. The default ports are:
 <table>
   <tr><th>Scheme</th><th>Port</th></tr>
@@ -183,7 +183,7 @@ The following code sets a SOCKS 5 proxy for HTTP connections to all servers but
 foobar.com and uses direct connections for all other protocols. The settings
 apply to regular and incognito windows, as incognito windows inherit settings
 from regular windows. Please also consult the <a
-  href="types.html#ChromeSetting">Types API</a> documentation.
+  href="https://developer.chrome.com/extensions/types">Types API</a> documentation.
 </p>
 
 <pre>
@@ -225,7 +225,7 @@ chrome.proxy.settings.set(
 <p>
 The next snippet queries the currently effective proxy settings. The effective
 proxy settings can be determined by another extension or by a policy. See the <a
-  href="types.html#ChromeSetting">Types API</a> documentation for details.
+  href="https://developer.chrome.com/extensions/types">Types API</a> documentation for details.
 </p>
 
 <pre>
