--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -1,29 +1,15 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default-withsidebar
+title: opr.sidebarAction
+author: shwetankdixit
+copyright: opera-ccby
+---
 
-	<head>
-		<meta content="text/html; charset=utf-8" http-equiv="content-type">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="HandheldFriendly" content="True">
-		<meta name="MobileOptimized" content="320">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="cleartype" content="on">
-		<link type="image/ico" rel="icon" href="//www.google.com/images/icons/product/chrome-32.png">
-		<link href="site.css" rel="stylesheet" type="text/css">
-		<!--<link href="/static/css/print.css" rel="stylesheet" type="text/css" media="print">
-		<link href="/static/css/prettify.css" rel="stylesheet" type="text/css">-->
-		<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700%7CSource+Code+Pro" rel="stylesheet" type="text/css">
-		<title>opr.sidebarAction - Opera</title>
-		<style>.comment {border: 1px solid red; color: red; padding: 5px 10px;}</style>
-	</head>
-
-	<body>
-		<div id="gc-container"> <a href="#gc-pagecontent" class="element-invisible element-focusable">Skip
-				to main content</a>
+		<div id="gc-container">
 			<main id="gc-pagecontent" role="main">
 				<article>
 					<div itemprop="articleBody" class="api">
-						<h1>opr.sidebarAction</h1>
+						<h2>Contents</h2>
 						<table class="intro" id="intro">
 							<tbody>
 								<tr>
@@ -871,10 +857,4 @@
 					</div>
 				</article>
 			</main>
-			<footer id="gc-footer" role="contentinfo" class="span-full">
-<p>&copy; 2015 Opera Software ASA</p>
-			</footer>
 		</div>
-	</body>
-
-</html>
