Added additional wording for clarity
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -70,7 +70,7 @@ copyright: opera-ccby
 							<p> Set the text and color of the badge using <a href="#method-setBadgeText">sidebarAction.setBadgeText</a> and <a href="#method-setBadgeBackgroundColor">sidebarAction.setBadgeBackgroundColor</a>,
 								respectively. </p>
 							<h3 id="panel">Panel</h3>
-							<p>If a sidebar action has a panel, it will appear when the user clicks the icon. The panel can contain any HTML content that you like, and it's automatically sized to fit the available width and height. </p>
+							<p>If a sidebar action has a panel, it will appear when the user clicks the icon. The panel can contain any HTML content that you like, and it's automatically sized to fit the available width and height. It is recommended that developers make their panel pages fluid and responsive in order to look good in various widths.</p>
 							<p> To add a panel to your sidebar action, create an HTML file with the panel's contents. Specify the HTML file in the <b>default_panel</b> field of <b>sidebar_action</b> in the <a href="#manifest">manifest</a>, or call the <a href="#method-setPanel">sidebarAction.setPanel</a> method.</p>
 						</section>
 						<section id="toc">
