Replace mention of popup to panels
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -374,7 +374,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 											<span>object details</span>) </code>
 									</div>
 									<div class="description">
-										<p> Sets the html document to be opened as a popup when the user clicks on the sidebar action's icon. </p>
+										<p> Sets the html document to be opened as a panel when the user clicks on the sidebar action's icon. </p>
 										<table>
 											<tbody>
 												<tr>
@@ -394,11 +394,11 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 																		<p> Limits the change to when a particular tab is selected. Automatically resets when the tab is closed. </p>
 																	</td>
 																</tr>
-																<tr id="property-details-popup">
+																<tr id="property-details-panel">
 																	<td>string</td>
-																	<td> popup</td>
+																	<td> panel</td>
 																	<td>
-																		<p> The html file to show in a popup. Cannot be empty an emptry string (entering a valid html file is mandatory)</p>
+																		<p> The html file to show in a panel. Cannot be empty an emptry string (entering a valid html file is mandatory)</p>
 																	</td>
 																</tr>
 															</tbody>
@@ -418,7 +418,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 									</div>
 									<div class="description">
 										<p class="availability"> </p>
-										<p> Gets the html document set as the popup for this sidebar action. </p>
+										<p> Gets the html document set as the panel for this sidebar action. </p>
 										<table>
 											<tbody>
 												<tr>
@@ -435,7 +435,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 																	<td>
 																		<span class="optional">(optional)</span> tabId</td>
 																	<td>
-																		<p> Specify the tab to get the popup from. If no tab is specified, the non-tab-specific popup is returned. </p>
+																		<p> Specify the tab to get the panel from. If no tab is specified, the non-tab-specific panel is returned. </p>
 																	</td>
 																</tr>
 															</tbody>
