--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -370,8 +370,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 								<div>
 									<h3 id="method-setPanel">setPanel </h3>
 									<div class="summary">
-										<code class="prettyprint"> opr.sidebarAction.setPanel(
-											<span>object details</span>) </code>
+										<code class="prettyprint"> opr.sidebarAction.setPanel(<span>object details</span>)</code>
 									</div>
 									<div class="description">
 										<p> Sets the html document to be opened as a panel when the user clicks on the sidebar action's icon. </p>
