Adding tutorial link to the sidebarAction API doc
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -28,6 +28,11 @@ copyright: opera-ccby
 										<span class="code"> "sidebar_action": {...} </span>
 										<br> </td>
 								</tr>
+								<tr>
+									<td class="title">Learn More:</td>
+									<td> <a href="tut_sidebar_actions.html">Creating extensions for the sidebar</a>
+										<br> </td>
+								</tr>
 							</tbody>
 						</table>
 						<section>
