--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -81,7 +81,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 			 To set the tooltip, use the <b>default_title</b> field of <b>sidebar_action</b> in the <a href="#manifest">manifest</a>, or call the <a href="#method-setTitle">sidebarAction.setTitle</a> method. You can specify locale-specific strings for the <b>default_title</b> field; see <a href="tut_internationalization.html">Internationalization</a> for details.
 			</p>
 
-							<h3 id="badge">Badge (not supported yet)</h3>
+							<h3 id="badge">Badge</h3>
 							<p>sidebar actions can optionally display a
 								<em>badge</em> — a bit of text that is layered over the icon. Badges make it easy to update the sidebar action to display a small amount of information about the state of the extension.</p>
 							<p>Because the badge has limited space, it should have 4 characters or less. </p>
