removing onclick event handler
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -675,48 +675,6 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 								</div>
 								<h2 id="events">Events</h2>
 								<div>
-									<h3 id="event-onClicked">onClicked</h3>
-									<div class="description">
-										<p> Fired when a sidebar action icon is clicked.</p>
-										<div>
-											<h4 title="">addListener </h4>
-											<div class="summary">
-												<code class="prettyprint"> opr.sidebarAction.onClicked.addListener(
-													<span>function callback</span>) </code>
-											</div>
-											<div class="description">
-												<table class="innerTable">
-													<tbody>
-														<tr>
-															<th colspan="3">Parameters</th>
-														</tr>
-														<tr id="property-onClicked-callback">
-															<td>function</td>
-															<td> callback</td>
-															<td>
-																<p> The
-																	<em>callback</em> parameter should be a function that looks like this: </p>
-																<code class="prettyprint">function( <a href="/extensions/tabs#type-Tab">tabs.Tab</a> tab)
-																	<span class="subdued">{...}</span>;</code>
-																<table class="innerTable">
-																	<tbody>
-																		<tr id="property-onClicked-tab">
-																			<td> <a href="/extensions/tabs#type-Tab">tabs.Tab</a>
-																			</td>
-																			<td> tab</td>
-																			<td>
-																				<br> </td>
-																		</tr>
-																	</tbody>
-																</table>
-															</td>
-														</tr>
-													</tbody>
-												</table>
-											</div>
-										</div>
-									</div>
-								</div>
 								<div>
 									<h3 id="event-onFocus">onFocus (not supported yet)</h3>
 									<div class="description">
@@ -740,14 +698,14 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 															<td>
 																<p> The
 																	<em>callback</em> parameter should be a function that looks like this: </p>
-																<code class="prettyprint">function( <a href="/extensions/tabs#type-Tab">tabs.Tab</a> tab)
+																<code class="prettyprint">function( <a href="https://developer.chrome.com/extensions/windows#type-Window">windows.Window</a> window)
 																	<span class="subdued">{...}</span>;</code>
 																<table class="innerTable">
 																	<tbody>
 																		<tr id="property-onClicked-tab">
-																			<td> <a href="/extensions/tabs#type-Tab">tabs.Tab</a>
+																			<td> <a href="https://developer.chrome.com/extensions/windows#type-Window">windows.Window</a>
 																			</td>
-																			<td> tab</td>
+																			<td> window</td>
 																			<td>
 																				<br> </td>
 																		</tr>
@@ -784,14 +742,14 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 															<td>
 																<p> The
 																	<em>callback</em> parameter should be a function that looks like this: </p>
-																<code class="prettyprint">function( <a href="/extensions/tabs#type-Tab">tabs.Tab</a> tab)
+																<code class="prettyprint">function( <a href="https://developer.chrome.com/extensions/windows#type-Window">windows.Window</a> window)
 																	<span class="subdued">{...}</span>;</code>
 																<table class="innerTable">
 																	<tbody>
 																		<tr id="property-onClicked-tab">
-																			<td> <a href="/extensions/tabs#type-Tab">tabs.Tab</a>
+																			<td> <a href="https://developer.chrome.com/extensions/windows#type-Window">windows.Window</a>
 																			</td>
-																			<td> tab</td>
+																			<td> window</td>
 																			<td>
 																				<br> </td>
 																		</tr>
