some fixes to the sidebar doc page
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -19,7 +19,7 @@ copyright: opera-ccby
 								</tr>
 								<tr>
 									<td class="title">Availability:</td>
-									<td> For Opera 29 and onwards
+									<td> For Opera 30 and onwards
 										<br> </td>
 								</tr>
 								<tr>
@@ -177,11 +177,11 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 										</td>
 									</tr>
 									<tr>
-										<td><a href="#event-onFocus">onFocus</a> (not supported yet)
+										<td><a href="#event-onFocus">onFocus</a>
 										</td>
 									</tr>
 									<tr>
-										<td><a href="#event-onBlur">onBlur</a> (not supported yet)
+										<td><a href="#event-onBlur">onBlur</a>
 										</td>
 									</tr>
 								</tbody>
@@ -676,7 +676,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 								<h2 id="events">Events</h2>
 								<div>
 								<div>
-									<h3 id="event-onFocus">onFocus (not supported yet)</h3>
+									<h3 id="event-onFocus">onFocus</h3>
 									<div class="description">
 										<p>When the panel becomes in focus (user clicks inside the panel).</p>
 
@@ -720,7 +720,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 									</div>
 								</div>
 								<div>
-									<h3 id="event-onBlur">onBlur (not supported yet)</h3>
+									<h3 id="event-onBlur">onBlur</h3>
 									<div class="description">
 										<p>When panel loses focus when the user clicks on the webpage (or any other area outside the panel), thereby the panel loses focus.
 										</p>
